[tool.poetry]
name = "heroku-test"
version = "0.1.0"
description = ""
authors = ["waltermas <walterjmas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
